--- a/src/components/searchBar/index.css
+++ b/src/components/searchBar/index.css
@@ -5,7 +5,6 @@
 /* used for flexible rows */
 .inline-flex-center{
     width:100%;
-    height: 100%;
     display: inline-flex;
     justify-content: center;
     align-items: flex-start;
